--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
     android:paddingStart="@dimen/margin_4">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/crdview">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,35 +102,100 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/relativeLayout"
+                android:id="@+id/linlay"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="1">
-                    <TextView
+                    android:weightSum="1"
+                   >
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="01"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorPrimary"
+                        android:orientation="vertical"
                         android:gravity="center"
-                        android:textSize="15dp"
-                        android:layout_weight=".5"/>
+                        android:layout_weight=".5">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorPrimary"
+                            android:gravity="center"
+                            android:textSize="15dp"
+                            android:text="01" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="8dp"
+                            android:text="Rooms"/>
+
+                    </LinearLayout>
+<!--
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_below="@+id/linlay"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="-10dp"
+                        android:src="@drawable/ic_next" />
+-->
+                    <LinearLayout
+                        android:layout_width="184dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight=".5"
                         android:gravity="center"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:text="02"
-                        android:textSize="15dp"
-                        android:layout_weight=".5"/>
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="02"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="15dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Guests"
+                            android:textSize="8dp" />
+                    </LinearLayout>
+
+
+                    <!--  <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="01"
+                          android:textStyle="bold"
+                          android:textColor="@color/colorPrimary"
+                          android:gravity="center"
+                          android:textSize="15dp"
+                          android:layout_weight=".5"/>
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:gravity="center"
+                          android:textColor="@color/colorPrimary"
+                          android:textStyle="bold"
+                          android:text="02"
+                          android:textSize="15dp"
+                          android:layout_weight=".5"/>-->
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_below="@+id/crdview"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/roundcorner"
+        android:layout_marginTop="-20dp"
+        android:src="@drawable/ic_next" />
 
 </RelativeLayout>
     <RelativeLayout
@@ -165,14 +231,14 @@ android:layout_gravity="bottom"
             style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:id="@+id/btnfind"
             android:layout_weight=".5"
-            android:text="Find"/>
+            android:text="Find Hotel"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:id="@+id/btnbook"
             android:layout_weight=".5"
-            android:text="Booking"/>
+            android:text="My Booking"/>
     </LinearLayout>
 
 
