--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingEnd="@dimen/margin_4"
+        android:paddingLeft="@dimen/margin_4"
+        android:paddingRight="@dimen/margin_4"
+        android:paddingStart="@dimen/margin_4"
         android:id="@+id/crdview">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -217,8 +221,8 @@
     </RelativeLayout>
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-android:layout_gravity="bottom"
+    android:layout_height="40dp"
+    android:layout_gravity="bottom"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -230,6 +234,7 @@ android:layout_gravity="bottom"
             android:layout_height="wrap_content"
             style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:id="@+id/btnfind"
+
             android:layout_weight=".5"
             android:text="Find Hotel"/>
         <Button
