--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,7 @@
                             android:textColor="@color/colorPrimary"
                             android:gravity="center"
                             android:textSize="15dp"
+                            android:id="@+id/txtgetfrm"
                             android:text="01" />
                         <TextView
                             android:layout_width="wrap_content"
